Put one DAG API check inside an if.
That makes it more like the other API checks; the only way the check can
be true is if we actually checked for the DAG API stuff.

--- a/configure.in
+++ b/configure.in
@@ -780,41 +780,41 @@ if test "$want_dag" != no; then
 		ac_cv_lbl_dag_api=yes
 	fi
 	AC_MSG_RESULT([$ac_cv_lbl_dag_api ($dag_include_dir)])
-fi
 
-if test $ac_cv_lbl_dag_api = yes; then
-	V_INCLS="$V_INCLS -I$dag_include_dir"
+	if test $ac_cv_lbl_dag_api = yes; then
+		V_INCLS="$V_INCLS -I$dag_include_dir"
 
-	if test $V_PCAP != dag ; then
-		 SSRC="$SSRC pcap-dag.c"
-	fi
-
-	# See if we can find a general version string.
-	# Don't need to save and restore LIBS to prevent -ldag being
-	# included if there's a found-action (arg 3).
-	saved_ldflags=$LDFLAGS
-	LDFLAGS="-L$dag_lib_dir"
-	AC_CHECK_LIB([dag], [dag_attach_stream], [dag_streams="1"], [dag_streams="0"])
-	AC_CHECK_LIB([dag],[dag_get_erf_types], [
-		AC_DEFINE(HAVE_DAG_GET_ERF_TYPES, 1, [define if you have dag_get_erf_types()])])
-	AC_CHECK_LIB([dag],[dag_get_stream_erf_types], [
-		AC_DEFINE(HAVE_DAG_GET_STREAM_ERF_TYPES, 1, [define if you have dag_get_stream_erf_types()])])
-
-	LDFLAGS=$saved_ldflags
-
-	if test "$dag_streams" = 1; then
-		AC_DEFINE(HAVE_DAG_STREAMS_API, 1, [define if you have streams capable DAG API])
-		LIBS="$LIBS -ldag"
-		LDFLAGS="$LDFLAGS -L$dag_lib_dir"
-
-		AC_CHECK_LIB([vdag],[vdag_set_device_info], [ac_dag_have_vdag="1"], [ac_dag_have_vdag="0"])
-		if test "$ac_dag_have_vdag" = 1; then
-			AC_DEFINE(HAVE_DAG_VDAG, 1, [define if you have vdag_set_device_info()])
-			LIBS="$LIBS -lpthread"
+		if test $V_PCAP != dag ; then
+			 SSRC="$SSRC pcap-dag.c"
 		fi
-	fi
 
-	AC_DEFINE(HAVE_DAG_API, 1, [define if you have the DAG API])
+		# See if we can find a general version string.
+		# Don't need to save and restore LIBS to prevent -ldag being
+		# included if there's a found-action (arg 3).
+		saved_ldflags=$LDFLAGS
+		LDFLAGS="-L$dag_lib_dir"
+		AC_CHECK_LIB([dag], [dag_attach_stream], [dag_streams="1"], [dag_streams="0"])
+		AC_CHECK_LIB([dag],[dag_get_erf_types], [
+			AC_DEFINE(HAVE_DAG_GET_ERF_TYPES, 1, [define if you have dag_get_erf_types()])])
+		AC_CHECK_LIB([dag],[dag_get_stream_erf_types], [
+			AC_DEFINE(HAVE_DAG_GET_STREAM_ERF_TYPES, 1, [define if you have dag_get_stream_erf_types()])])
+
+		LDFLAGS=$saved_ldflags
+
+		if test "$dag_streams" = 1; then
+			AC_DEFINE(HAVE_DAG_STREAMS_API, 1, [define if you have streams capable DAG API])
+			LIBS="$LIBS -ldag"
+			LDFLAGS="$LDFLAGS -L$dag_lib_dir"
+
+			AC_CHECK_LIB([vdag],[vdag_set_device_info], [ac_dag_have_vdag="1"], [ac_dag_have_vdag="0"])
+			if test "$ac_dag_have_vdag" = 1; then
+				AC_DEFINE(HAVE_DAG_VDAG, 1, [define if you have vdag_set_device_info()])
+				LIBS="$LIBS -lpthread"
+			fi
+		fi
+
+		AC_DEFINE(HAVE_DAG_API, 1, [define if you have the DAG API])
+	fi
 fi
 
 AC_MSG_CHECKING(whether we have the DAG API)
@@ -939,6 +939,7 @@ if test "$with_snf" != no; then
 
 	AC_MSG_CHECKING(whether we have Myricom Sniffer API)
 
+	# If necessary, set default paths for Sniffer headers and libraries.
 	if test -z "$snf_root"; then
 		snf_root=/opt/snf
 	fi
