Move the DLT_ definitions to a separate file.
This allows code in libpcap that needs the DLT_ values but that picks up
BPF-related declarations/definitions from another file, so that if it
includes <pcap/bpf.h> it'll get redeclarations/redefinitions of them, to
just get them.

--- a/Makefile.in
+++ b/Makefile.in
@@ -104,6 +104,7 @@ PUBHDR = \
 	pcap-namedb.h \
 	pcap/bpf.h \
 	pcap/bluetooth.h \
+	pcap/dlt.h \
 	pcap/ipnet.h \
 	pcap/namedb.h \
 	pcap/nflog.h \
