Get rid of Win32/Src/getservent.c - we don't need it.
We don't use getservent(), setservent(), or endservent(), so we don't
need Win32/Src/getservent.c on Windows.

While we're at it, remove declarations of those routines from the old
lbl/os-XXX.h files.

--- a/Makefile.in
+++ b/Makefile.in
@@ -352,8 +352,7 @@ EXTRA_DIST = \
 	Win32/Prj/libpcap.dsp \
 	Win32/Prj/libpcap.dsw \
 	Win32/Src/gai_strerror.c \
-	Win32/Src/getopt.c \
-	Win32/Src/getservent.c
+	Win32/Src/getopt.c
 
 all: libpcap.a shared pcap-config
 
