Revert "scanner.c.top might not be in the current directory; look in $(srcdir)."
This reverts commit 1d62204e55be374c4ca10c49b4f704a79d93b527.

This is part of a move to require Flex 2.5.31 or later and to use
features in those versions of Flex, including %top.

--- a/Makefile.in
+++ b/Makefile.in
@@ -434,7 +434,7 @@ scanner.c: $(srcdir)/scanner.l
 	@rm -f $@ $@.bottom
 	$(srcdir)/runlex.sh $(LEX) -o$@ $<
 	mv $@ $@.bottom
-	cat $(srcdir)/$@.top $@.bottom > $@
+	cat $@.top $@.bottom > $@
 	@rm $@.bottom
 
 scanner.o: scanner.c tokdefs.h
