Revert "Fix an error causing scanner.h to not be generated"
This reverts commit 33f0649d45b3eb56136d11ef9c236a6455758b16.

This is part of a move to require Flex 2.5.31 or later and to use
features in those versions of Flex, including %top.

--- a/Makefile.in
+++ b/Makefile.in
@@ -431,8 +431,7 @@ libpcap.none:
 
 scanner.c: $(srcdir)/scanner.l
 	@rm -f $@ $@.bottom
-	$(srcdir)/runlex.sh $(LEX) -o$@ $<
-	mv $@ $@.bottom
+	$(srcdir)/runlex.sh $(LEX) -o$@.bottom $<
 	cat $@.top $@.bottom > $@
 
 scanner.o: scanner.c tokdefs.h
