Revert "Move the inclusion of config.h to the top of scanner.c"
This reverts commit 1dcc0d42a4afa488022d984db25db3cdae6b590a.

This is part of a move to require Flex 2.5.31 or later and to use
features in those versions of Flex, including %top.

--- a/Makefile.in
+++ b/Makefile.in
@@ -430,9 +430,8 @@ libpcap.shareda: $(OBJ)
 libpcap.none:
 
 scanner.c: $(srcdir)/scanner.l
-	@rm -f $@ $@.bottom
-	$(srcdir)/runlex.sh $(LEX) -o$@.bottom $<
-	cat $@.top $@.bottom > $@
+	@rm -f $@
+	$(srcdir)/runlex.sh $(LEX) -o$@ $<
 
 scanner.o: scanner.c tokdefs.h
 	$(CC) $(FULL_CFLAGS) -c scanner.c
